# science

./: README.md  pyproject.toml
assets/books/: crime_and_punishment.txt
src/graphics/: screen.py  view.py  world.py
src/graphics/common/: anchor.py  enums.py
src/graphics/components/: component.py
src/graphics/entities/: entity.py  rectangle.py
src/graphics/systems/: movement.py  render.py  system.py  trail.py
src/graphs/: plot.py
src/modules/linear_algebra/: errors.py  matrix.py
src/modules/markov_chains/: chain.py  discrete.py  errors.py  vector.py
